Fix overlay on iphones with notch

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.page {
+    top: env(safe-area-inset-top) !important;  /* iphone notch avoidance */
+    left: env(safe-area-inset-left) !important;
+}
 ons-toolbar a {
     text-decoration: none;
     color: maroon;
